[project]
name = "real-estate-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.6",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
]
